@@ -4,6 +4,6 @@ if (!defined ('TYPO3_MODE')) {
 }
 
 if (TYPO3_MODE === 'BE') {
-	t3lib_extMgm::addModule('web', 'info', 'after:layout', t3lib_extMgm::extPath($_EXTKEY) . 'mod1/');
+	t3lib_extMgm::addModule('web', 'info', '', t3lib_extMgm::extPath($_EXTKEY) . 'mod1/');
 }
 ?>
